added clipper divs within button divs

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
     <div id="buttons">
       <div class="row">
-        <div id="green" class="play"></div>
-        <div id="red" class="play"></div>
+        <div id="green" class="play">
+          <div class="clipper"></div>
+        </div>
+        <div id="red" class="play">
+          <div class="clipper"></div>
+        </div>
       </div>
       <div class="row">
-        <div id="yellow" class="play"></div>
-        <div id="blue" class="play"></div>  
+        <div id="yellow" class="play">
+          <div class="clipper"></div>
+        </div>
+        <div id="blue" class="play">
+          <div class="clipper"></div>
+        </div>  
         
       </div>
     </div>
