--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sample Text</title>
+  <title>Simon Game</title>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-  <!-- vue only for development -->
   <script src="https://vuejs.org/js/vue.min.js"></script>
   <script src="scripts.js"></script>
   <link rel="stylesheet" href="styles.css">
