--- a/index.html
+++ b/index.html
@@ -9,40 +9,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main id="app">
+  <main class="app">
+    <div class="controls">
+      <p class="current-level">Level: {{ level }}</p>
+        <!-- p>Check Level: {{ checkLevel }} </span></p>
+        <p>Generated: {{ currentPattern }} </p>
+        <p>User-pressed: {{ userPattern }}</p>
+        <p>Game blinks: {{ blinks }}</p -->
+      <button class="start">Start</button>
+      <div class="strict-container">
+        <input type="checkbox" id="strict">
+        <label for="strict">Strict Mode</label>
+      </div>
+    </div>
     <div id="buttons">
       <div class="row">
         <div id="green" class="play" data-color="g">
-          <div class="clipper"></div>
         </div>
         <div id="red" class="play" data-color="r">
-          <div class="clipper"></div>
-        </div>
-      </div>
-      <div class="row controls">
-        <button id="start">Start</button>
-        <div id="strict-container">
-          <input type="checkbox" id="strict">
-          <label for="strict">Strict Mode</label>
         </div>
       </div>
       <div class="row">
         <div id="yellow" class="play" data-color="y">
-          <div class="clipper"></div>
         </div>
         <div id="blue" class="play" data-color="b">
-          <div class="clipper"></div>
         </div>  
         
       </div>
-    </div>
-
-    <div id="debug-info">
-      <p>Current Level: {{ level }}</p>
-      <p>Check Level: {{ checkLevel }} </span></p>
-      <p>Generated: {{ currentPattern }} </p>
-      <p>User-pressed: {{ userPattern }}</p>
-      <p>Game blinks: {{ blinks }}</p>
     </div>
 
     <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" id="audio-r" preload="auto"></audio>
@@ -51,10 +44,11 @@
     <audio src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" id="audio-y" preload="auto"></audio>
 
   </main>
+  
 
   <script id="debug">
     new Vue({
-      el: "#debug-info",
+      el: ".current-level",
       data: game
     });
   </script>
