added title on top of page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <h1 class="header-text">Simple Simon</h1>
   <main class="app">
     <div class="controls">
       <p class="current-level">Level: {{ level }}</p>
